--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ nav {
 nav ul {
    list-style: none;
    display: flex;
-   gap: 100px;
+   gap: 60px;
 }
 
 nav ul li a {
@@ -56,7 +56,7 @@ nav ul li a:hover {
    position: relative;
    margin-top: 50px;
    display: grid;
-   grid-template-columns: 4fr 1fr;
+   grid-template-columns: 3fr 1fr;
 }
 
 .nav-right {
@@ -75,13 +75,13 @@ nav ul li a:hover {
    background-color: #6e0bbe;
    padding: 20px 5%;
    font-size: 22px;
-   width: 140%;
-   height: 65vh;
+   width: 90%;
+   height: 100vh;
    border-radius: 2%;
    position: sticky;
    top: 0;
    z-index: 100;
-   
+   margin-left: 0px;
 }
 
 .form-section input {
@@ -92,7 +92,20 @@ nav ul li a:hover {
 }
 
 .submit-btn {
-   font-size: 21px;
    color: rgb(67, 4, 104);
-   font-weight: 500;
+   margin: 60px 0px 0px 0px;
+   padding: 10px 5px;
+}
+.submit-btn input {
+   font-size: 22px;
+}
+
+.title {
+   font-size: 27px;
+   font-weight: 600;
+   margin: 10px 5px;
+}
+
+.sub {
+   padding: 5px 10px;
 }
