--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ nav ul {
 }
 
 nav ul li a {
-   font-size: 30px;
+   font-size: 24px;
    color: white;
    text-decoration: none;
    justify-content: space-between;
@@ -61,8 +61,7 @@ nav ul li a:hover {
 
 .nav-right {
    width: 100%;
-   height: 100vh;
-   font-size: 1.5rem;
+   font-size: 0.9rem;
 }
 
 .nav-right ol {
@@ -74,9 +73,9 @@ nav ul li a:hover {
    justify-content: space-between;
    background-color: #6e0bbe;
    padding: 20px 5%;
-   font-size: 22px;
-   width: 90%;
-   height: 100vh;
+   font-size: 18px;
+   width: 400px;
+   height: 900px;
    border-radius: 2%;
    position: sticky;
    top: 0;
@@ -85,7 +84,7 @@ nav ul li a:hover {
 }
 
 .form-section input {
-   padding: 10px 70px;
+   padding: 10px 40px;
    margin: 10px 10px;
    outline: 0;
    border: 0;
@@ -101,8 +100,8 @@ nav ul li a:hover {
 }
 
 .title {
-   font-size: 27px;
-   font-weight: 600;
+   font-size: 19px;
+   font-weight: 500;
    margin: 10px 5px;
 }
 
