--- a/main.css
+++ b/main.css
@@ -12,7 +12,6 @@ body {
 
 .header {
    width: 100%;
-   height: 100vh;
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./img/header-image.jpg);
    background-size: cover;
    background-position: center;
@@ -62,11 +61,24 @@ nav ul li a:hover {
 .nav-right {
    width: 100%;
    font-size: 0.9rem;
+   display: flex;
+   flex-direction: column;
+   font-size: 0.9rem;
+}
+.nav-right h1, h3{
+   justify-content: center;
+   text-align: center;
+   font-size: 24px;
+   padding: 5px 5px;
+}
+.nav-right img {
+   margin: 20px 20%;
+}
+.handle-bar {
+   margin: 10px 20%;
+   font-weight: 600;
 }
 
-.nav-right ol {
-   margin-top: 20px;
-}
 
 .form-section {
    align-items: center;
