--- a/style.css
+++ b/style.css
@@ -5,14 +5,6 @@
    background-color: #000000;
 }
 
-
-/* body{
-   min-height: 100vh;
-   overflow: hidden; 
-   position: fixed;
-   
-} */
-
 .heading{
 font-size: 50px;
 float: center;
@@ -42,6 +34,7 @@ span{
 
 .imagename{
    background-color: white;
+   cursor: pointer;
    width: 100%;
    font-weight: bolder;
    font-size: 25px;
@@ -51,3 +44,7 @@ span{
    text-align: center;
 }
 
+.imagename:hover {
+   padding: 5px;
+   opacity: .8;
+}
